syntax = "proto3";

package gameplay_service;

import "../common/entry.proto";

message RefreshRequest {
  string refreshToken = 1;  // JWT refresh token
  DeviceInfo deviceInfo = 2;  // Device information
}
  
message RefreshResponse {
  string accessToken = 1;  // JWT access token
  string refreshToken = 2;  // JWT refresh token
}
